# mt5_tester_with_python

./: README.md  pyproject.toml
src/: MT5TERMINAL.py  enumerations.py  ordersmanagement.py
src/mt5pyth_tester_kudston/: schemas.py
src/mt5pyth_tester_kudston.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
